kuber/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      label-test: app-pod
  template:
    metadata:
      labels:
        label-test: app-pod
    spec:
      containers:
        - name: app
          image: mirgraf/mirgraf_rep:V6.1
          ports:
            - containerPort: 8000
