kuber/nginxexpsrv.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-exporter
spec:
  selector:
    app: nginx-exporter
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: nginx-exporter
