kuber/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-test
  labels:
    label-test: service-test
spec:
  selector:
    label-test: app-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
    - protocol: TCP
      name: metrics
      port: 80
      targetPort: 8000
