kuber/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress

  metadata:
    name: ingress
  spec:
    rules:
      - host: arch.homework
      - http:
          paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: service-test
                port:
                  number: 80
